<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_home_graph"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.amirdaryabak.runningapp.ui.fragments.HomeFragment"
        android:label="@string/home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_homeFragment_to_runningFragment"
            app:destination="@id/runningFragment" />
        <action
            android:id="@+id/action_homeFragment_to_runItemFragment"
            app:destination="@id/runItemFragment" />
    </fragment>
    <fragment
        android:id="@+id/runningFragment"
        android:name="com.amirdaryabak.runningapp.ui.fragments.RunningFragment"
        android:label="@string/running_place"
        tools:layout="@layout/fragment_running" >
    </fragment>
    <action
        android:id="@+id/action_global_runningFragment"
        app:destination="@id/runningFragment" />
    <fragment
        android:id="@+id/runItemFragment"
        android:name="com.amirdaryabak.runningapp.ui.fragments.RunItemFragment"
        android:label="@string/running_detail"
        tools:layout="@layout/fragment_run_item" >
        <argument
            android:name="runId"
            app:argType="integer" />
    </fragment>
    <action
        android:id="@+id/action_global_runItemFragment"
        app:destination="@id/runItemFragment" />

</navigation>