<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/MainBackground"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvDate"
        style="@style/SubTitleText.Black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:src="@drawable/ic_calendar"
        app:layout_constraintBottom_toBottomOf="@+id/tvDate"
        app:layout_constraintEnd_toStartOf="@+id/tvDate"
        app:layout_constraintTop_toTopOf="@+id/tvDate" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvTime"
        style="@style/SubTitleText.Black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/time"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="@+id/imageView" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_clock"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvDistance"
        style="@style/SubTitleText.Black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/distance"
        app:layout_constraintStart_toEndOf="@+id/imageView2"
        app:layout_constraintTop_toBottomOf="@+id/tvTime" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_distance"
        app:layout_constraintBottom_toBottomOf="@+id/tvDistance"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="@+id/tvDistance" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvAvgSpeed"
        style="@style/SubTitleText.Black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/average_speed"
        app:layout_constraintEnd_toEndOf="@+id/tvDate"
        app:layout_constraintTop_toBottomOf="@+id/tvDate" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:src="@drawable/ic_speed"
        app:layout_constraintBottom_toBottomOf="@+id/tvAvgSpeed"
        app:layout_constraintEnd_toStartOf="@+id/tvAvgSpeed"
        app:layout_constraintTop_toTopOf="@+id/tvAvgSpeed" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/tvCalories"
        style="@style/CustomButton.Transparent"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:paddingStart="32dp"
        android:paddingEnd="32dp"
        android:text="@string/calories"
        app:cornerRadius="20dp"
        android:drawable="@drawable/ic_calories_calculator"
        app:layout_constraintEnd_toEndOf="@+id/tvAvgSpeed"
        app:layout_constraintStart_toStartOf="@+id/imageView2"
        app:layout_constraintTop_toBottomOf="@+id/tvAvgSpeed" />

</androidx.constraintlayout.widget.ConstraintLayout>