<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/MainBackground"
    android:fillViewport="true"
    tools:context=".ui.fragments.ProfileFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.53" />

        <TextView
            android:id="@+id/tvWelcome"
            style="@style/TitleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/your_information"
            android:textAlignment="center"
            android:textSize="24sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txtDummyPersonalInfo"
            style="@style/TitleText.StateEnableOrDisable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/personal_information"
            app:layout_constraintStart_toStartOf="@+id/tilName"
            app:layout_constraintTop_toBottomOf="@+id/tvWelcome" />

        <ImageView
            android:id="@+id/ivDummyPersonalInfo"
            android:layout_width="24dp"
            android:layout_height="24dp"
            app:layout_constraintBottom_toBottomOf="@+id/txtDummyPersonalInfo"
            app:layout_constraintEnd_toStartOf="@+id/txtDummyPersonalInfo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/txtDummyPersonalInfo"
            app:srcCompat="@drawable/ic_user" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilName"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtDummyPersonalInfo">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tieName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:hint="@string/name"
                android:imeOptions="actionNext"
                android:inputType="textPersonName"
                android:paddingStart="0dp"
                android:paddingEnd="0dp"
                android:paddingBottom="2dp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilFamilyName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/tilName"
            app:layout_constraintTop_toBottomOf="@+id/tilName">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tieFamilyName"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:hint="@string/familyName"
                android:imeOptions="actionDone"
                android:inputType="textPersonName"
                android:paddingStart="0dp"
                android:paddingEnd="0dp"
                android:paddingBottom="2dp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilWeight"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            app:errorIconDrawable="@null"
            app:layout_constraintEnd_toEndOf="@+id/guideline3"
            app:layout_constraintStart_toStartOf="@+id/tilName"
            app:layout_constraintTop_toBottomOf="@+id/tilFamilyName">

            <AutoCompleteTextView
                android:id="@+id/spWeight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:hint="@string/your_weight"
                android:inputType="none" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilAge"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            app:errorIconDrawable="@null"
            app:layout_constraintEnd_toEndOf="@+id/tilName"
            app:layout_constraintStart_toEndOf="@+id/guideline3"
            app:layout_constraintTop_toTopOf="@+id/tilWeight">

            <AutoCompleteTextView
                android:id="@+id/spAge"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:hint="@string/your_age"
                android:inputType="none" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/txtDummyGender"
            style="@style/TitleText.StateEnableOrDisable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/gender"
            app:layout_constraintStart_toStartOf="@+id/tilName"
            app:layout_constraintTop_toBottomOf="@+id/tilWeight" />

        <ImageView
            android:id="@+id/ivDummyGender"
            android:layout_width="24dp"
            android:layout_height="24dp"
            app:layout_constraintBottom_toBottomOf="@+id/txtDummyGender"
            app:layout_constraintEnd_toStartOf="@+id/txtDummyGender"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/txtDummyGender"
            app:srcCompat="@drawable/ic_gender" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl6"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/rounded_et_color_primary"
            android:layoutDirection="ltr"
            app:layout_constraintEnd_toEndOf="@+id/tilName"
            app:layout_constraintStart_toStartOf="@+id/tilName"
            app:layout_constraintTop_toBottomOf="@+id/txtDummyGender">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.50" />

            <TextView
                android:id="@+id/btnMale"
                style="@style/SubTitleText.StateEnableOrDisableOrError.Right"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:gravity="center"
                android:text="@string/male"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/guideline1"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/btnFemale"
                style="@style/SubTitleText.StateEnableOrDisableOrError.Left"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:gravity="center"
                android:text="@string/female"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/guideline1"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"  />


        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnChangeTheme"
            style="@style/CustomButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:drawableEnd="@drawable/ic_paint_24"
            android:text="@string/theme_setting"
            android:visibility="gone"
            android:textAlignment="viewStart"
            app:cornerRadius="20dp"
            app:layout_constraintEnd_toEndOf="@+id/cl6"
            app:layout_constraintStart_toStartOf="@+id/cl6"
            app:layout_constraintTop_toBottomOf="@+id/cl6" />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnEditProfile"
            style="@style/CustomButton.Enabled"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginBottom="16dp"
            android:paddingStart="32dp"
            android:paddingEnd="32dp"
            android:text="@string/change_your_information"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/tilName"
            app:layout_constraintStart_toStartOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
