<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/MainBackground"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.HomeFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        style="@style/MainBackground"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Spinner
            android:id="@+id/spFilter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:entries="@array/filter_options"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            app:layout_constraintStart_toEndOf="@+id/tvFilterBy"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvFilterBy"
            style="@style/SubTitleText.Black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/sort_by"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@+id/spFilter"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvRuns"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/spFilter"
            app:layout_constraintVertical_bias="1.0"
            tools:listitem="@layout/item_run" />

        <TextView
            android:id="@+id/empty_list_tv"
            style="@style/SubTitleText.Black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/your_list_is_empty"
            android:visibility="gone"
            tools:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvFilterBy" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/fab"
        style="@style/CustomButton.Enabled"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|start"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="8dp"
        android:padding="10dp"
        android:text="@string/start_a_run"
        app:cornerRadius="20dp"
        app:icon="@drawable/ic_run"
        app:iconTint="@color/colorAccent"
        app:layout_behavior="@string/hide_bottom_view_on_scroll_behavior" />

    <include
        android:id="@+id/warningUi"
        layout="@layout/handle_warning_request_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>
